pixmapdir = $(datadir)/pixmaps
pixmap_DATA = gnome-planner.png

imagesdir = $(datadir)/pixmaps/planner
images_DATA = \
	tasks.png			\
	gantt.png			\
	resources.png			\
	resources_usage.png		\
	24_insert_task.png		\
	24_remove_task.png		\
	24_unlink_task.png		\
	24_link_task.png		\
	24_indent_task.png		\
	24_unindent_task.png		\
	24_insert_resource.png		\
	24_remove_resource.png		\
	24_edit_resource.png		\
	24_groups.png			\
	24_task_down.png		\
	24_task_up.png

mimeiconsdir = $(datadir)/pixmaps
mimeicons_DATA = gnome-application-x-planner.png

EXTRA_DIST = \
	$(pixmap_DATA)			\
	$(images_DATA)			\
	$(mimeicons_DATA)

