stylesheetdir = $(datadir)/planner/stylesheets

stylesheet_DATA = \
	mrproject2html.xsl                              \
	html1_css.xsl                                   \
        html1_gantt.xsl                                 \
        html1_resources.xsl                             \
        html1_tasks.xsl

EXTRA_DIST = $(stylesheet_DATA)
